<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/detail_padding"
            android:src="@drawable/sample_0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/movie_poster"
            android:orientation="vertical"
            android:paddingTop="@dimen/text_padding">

            <TextView
                android:id="@+id/title"
                style="@style/DetailActivityText"
                android:text="Title"
                android:textColor="@color/black"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release_date"
                style="@style/DetailActivityText"
                android:text="May 2018"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/rating"
                style="@style/DetailActivityText"
                android:text="9.8/10"
                android:textSize="@dimen/detail_text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/divide_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@id/movie_poster"
            android:background="@color/black" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divide_1"
            android:padding="@dimen/detail_padding"
            android:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground fight clubs forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion."
            android:textColor="@color/black"
            android:textSize="@dimen/detail_text_size" />

        <TextView
            android:id="@+id/divide_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@id/overview"
            android:background="@color/black" />

        <TextView
            android:id="@+id/trailers"
            style="@style/DetailActivityText"
            android:layout_below="@id/divide_2"
            android:padding="@dimen/detail_padding"
            android:text="@string/trailers"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/divide_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@id/trailers"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/trailer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divide_3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_play_arrow_gray_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_padding_wide"
                android:text="@string/trailer_1"
                android:textSize="@dimen/detail_text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/show_more_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailer_1"
            android:paddingBottom="@dimen/detail_padding_wide"
            android:paddingLeft="@dimen/detail_padding_wide"
            android:paddingTop="@dimen/no_padding"
            android:text="@string/show_more"
            android:textSize="@dimen/detail_text_size"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/divide_4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@id/show_more_trailers"
            android:background="@color/black" />

        <TextView
            android:id="@+id/reviews"
            style="@style/DetailActivityText"
            android:layout_below="@id/divide_4"
            android:padding="@dimen/detail_padding"
            android:text="@string/reviews"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/divide_5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@id/reviews"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/review_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divide_5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_padding_wide"
                android:text="Author"
                android:textSize="@dimen/detail_text_size"
                android:textStyle="bold"/>

        <TextView
            android:id="@+id/review_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/detail_padding_wide"
            android:paddingBottom="@dimen/detail_padding_wide"
            android:text="@string/review_1"
            android:textSize="@dimen/detail_text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/show_more_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/review_1"
            android:paddingBottom="@dimen/detail_padding_wide"
            android:paddingLeft="@dimen/detail_padding_wide"
            android:paddingTop="@dimen/no_padding"
            android:text="@string/show_more"
            android:textSize="@dimen/detail_text_size"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/detail_network_exception"
            style="@style/ErrorText"
            android:text="@string/network_exception" />

    </RelativeLayout>

</ScrollView>